[tool.poetry]
name = "machinelearning"
version = "0.1.0"
description = ""
authors = ["Jefffish09 <44800122+Jefffish09@users.noreply.github.com>"]
license = "GNU General Public License v3.0"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
